<?xml version="1.0" encoding="utf-8"?>


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="Sign In"
            android:textColor="#808080"
            android:textSize="25sp"
            android:id="@+id/textView"
            android:fontFamily="@font/montserrat"/>

    <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/textView"
            android:layout_marginTop="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_centerHorizontal="true"
            android:padding="5dp"
            android:singleLine="true"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/montserrat"/>

        <EditText
            android:id="@+id/password"
            android:fontFamily="@font/montserrat"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="25dp"
            android:singleLine="true"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_below="@id/email"
            android:layout_centerHorizontal="true"
            android:padding="5dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/password"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/submitbutton"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/roundedbutton"
            android:layout_below="@id/password"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:paddingStart="2dp"
            android:paddingTop="2dp"
            android:text="@string/submit"
            android:textColor="@android:color/background_light"
            android:textSize="20sp"
            android:fontFamily="@font/montserrat"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"
            android:onClick="login"
            />




    </RelativeLayout>


