

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"

        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"

        android:layout_marginBottom="30dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="7dp">

        <RelativeLayout
            android:id="@+id/cardlayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <ImageView

                android:id="@+id/blueberry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_centerHorizontal="true"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:transitionName="transition"
                android:src="@drawable/sampleprofile"

                />

            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/rupees"
                android:text="@string/rupee"
                android:layout_below="@id/blueberry"
                android:foregroundTint="#28b180"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:id="@+id/price"
                android:textColor="#ffffff"
                android:textSize="12sp"
                android:textAllCaps="false"
                />



            <TextView
                android:id="@+id/counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:textColor="#111111"
                android:textStyle="bold"
                android:visibility="invisible"
                android:layout_below="@id/blueberry"
                android:layout_toStartOf="@id/plus"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="15dp"/>

            <TextView
                android:id="@+id/bluetext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/blueberry"
                android:text="@string/blueberry"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:textSize="16sp"
                />

            <TextView
                android:id="@+id/gramtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/bluetext"
                android:layout_marginTop="2dp"
                android:layout_marginStart="10dp"
                android:text="@string/gram"
                android:textColor="#ffffff"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/gramtext"
                android:visibility="invisible"
                android:id="@+id/linkholder"/>



            <!--Next Product-->


        </RelativeLayout>


    </android.support.v7.widget.CardView>
