<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navi"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@android:color/background_light"
        app:itemTextColor="@color/colorPrimaryDark"
        app:menu="@menu/drawablemenu"
        android:layout_gravity="end"
        app:headerLayout="@layout/header"
        app:itemIconTint="#28b180">

    </android.support.design.widget.NavigationView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rine_background"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/linear">

            <Button
                android:id="@+id/back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/back"
                android:contentDescription="@string/todo"
                android:onClick="back"/>

            <TextView
                android:id="@+id/imagerine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginTop="11dp"
                android:text="@string/products"
                android:textColor="@android:color/background_light"
                android:textSize="20sp"
                android:fontFamily="sans-serif-smallcaps"
                android:contentDescription="@string/todo" />

            <Button
                android:id="@+id/store"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="80dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/storeicon1"
                android:onClick="tocart"/>

            <Button
                android:id="@+id/hamburger"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:background="@drawable/ham"
                android:layout_marginTop="8dp"
                android:onClick="drawerclick"/>

        </RelativeLayout>



        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.CardView
                    android:id="@+id/card_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="30dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    app:cardCornerRadius="5dp">

                    <RelativeLayout
                        android:id="@+id/cardlayout1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/productimg"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="0dp"
                            android:layout_centerHorizontal="true"
                            android:scaleType="centerCrop"
                            android:adjustViewBounds="true"

                            />



                        <android.support.design.widget.FloatingActionButton
                            android:id="@+id/floatproduct1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/floatingcart"
                            android:layout_below="@id/productimg"
                            android:layout_alignParentEnd="true"
                            android:layout_marginEnd="15dp"
                            android:layout_marginTop="7dp"
                            app:fabSize="mini"
                            android:onClick="add_to_cart"/>

                        <Button
                            android:id="@+id/minus"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:background="@drawable/counter"
                            android:text="@string/minus"
                            android:layout_below="@id/productimg"
                            android:layout_toStartOf="@id/bluecountertext"
                            android:layout_marginTop="15dp"
                            android:layout_marginEnd="15dp"
                            android:onClick="decrease_count1"/>

                        <Button
                            android:id="@+id/plus"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:background="@drawable/counter"
                            android:text="@string/plus"
                            android:layout_below="@id/productimg"
                            android:layout_toStartOf="@id/floatproduct1"
                            android:layout_marginTop="15dp"
                            android:layout_marginEnd="10dp"
                            android:onClick="increase_count1"/>

                        <TextView
                            android:id="@+id/bluecountertext"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="1"
                            android:textColor="#111111"
                            android:textStyle="bold"
                            android:layout_below="@id/productimg"
                            android:layout_toStartOf="@id/plus"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="15dp"/>
                        <!--***************Counter1 End***********-->



                        <TextView
                            android:id="@+id/bluetext"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/productimg"
                            android:text="@string/blueberry"
                            android:textColor="@android:color/background_dark"
                            android:textStyle="bold"
                            android:layout_marginTop="10dp"
                            android:layout_marginStart="10dp"
                            android:textSize="16sp"/>

                        <TextView
                            android:id="@+id/gramtext"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/bluetext"
                            android:layout_marginTop="2dp"
                            android:layout_marginStart="10dp"
                            android:text="@string/gram"/>

                        <TextView
                            android:id="@+id/info1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/background_dark"
                            android:textStyle="bold"
                            android:layout_marginTop="10dp"
                            android:layout_marginStart="10dp"
                            android:textSize="16sp"
                            android:layout_below="@id/gramtext"
                            android:text="Energy Rich Cereal Bar"/>

                        <TextView
                            android:id="@+id/info2"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="#d3d3d3"
                            android:layout_marginTop="5dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:textSize="16sp"
                            android:layout_below="@id/info1"
                            />

                        <TextView
                            android:id="@+id/info3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/background_dark"
                            android:textStyle="bold"
                            android:layout_marginTop="5dp"
                            android:layout_marginStart="10dp"
                            android:textSize="16sp"
                            android:layout_below="@id/info2"
                            android:text="Description: "/>

                        <TextView
                            android:id="@+id/info4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#a9a9a9"
                            android:layout_marginTop="5dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:textSize="16sp"
                            android:layout_below="@id/info3"
                            android:text="@string/info4"/>

                        <Button
                            android:id="@+id/subscribe"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Subscribe"
                            android:layout_below="@id/info4"
                            android:layout_centerHorizontal="true"
                            android:background="#28b180"
                            android:textColor="#ffffff"
                            android:layout_marginTop="10dp"/>

                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="10dp"
                            android:layout_below="@id/subscribe"/>



                        <!--Next Product-->






                    </RelativeLayout>


                </android.support.v7.widget.CardView>
            </RelativeLayout>
        </ScrollView>



    </RelativeLayout>
</android.support.v4.widget.DrawerLayout>
