<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navi"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@android:color/background_light"
        app:itemTextColor="@color/colorPrimaryDark"
        app:menu="@menu/drawablemenu"
        android:layout_gravity="end"
        app:headerLayout="@layout/header"
        app:itemIconTint="#28b180">

    </android.support.design.widget.NavigationView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rine_background"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:id="@+id/linear">

            <ImageView
                android:id="@+id/imagerine"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/homeloogo"
                android:contentDescription="@string/todo" />

            <Button
                android:id="@+id/store"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="80dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/storeicon1"
                android:onClick="tocart"/>

            <Button
                android:id="@+id/hamburger"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:background="@drawable/ham"
                android:layout_marginTop="8dp"
                android:onClick="drawerclick"/>

        </RelativeLayout>

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
            >

                <Button
                    android:id="@+id/productsbutton"
                    android:layout_width="match_parent"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_height="140dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="0dp"
                    android:onClick="loadProducts"
                    android:text="@string/products"
                    android:textColor="@android:color/background_light"
                    android:textSize="30sp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:background="@drawable/strawberry"

                    />

                <Button
                    android:id="@+id/subscriptionbutton"
                    android:layout_width="match_parent"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_height="140dp"
                    android:layout_below="@+id/productsbutton"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/subscription"
                    android:text="@string/subscription"
                    android:textColor="@android:color/background_light"
                    android:textSize="30sp"
                    android:fontFamily="sans-serif-smallcaps"/>


                <Button
                    android:id="@+id/bmi"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_below="@+id/subscriptionbutton"
                    android:layout_toStartOf="@+id/workout"
                    android:layout_marginEnd="15dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/bmi"
                    android:shadowRadius="5"
                    android:onClick="calbmi"
                    />

                <Button
                    android:id="@+id/workout"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_below="@+id/subscriptionbutton"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/workout"
                    android:shadowRadius="5"
                    android:onClick="calworkouts"/>

                <Button
                    android:id="@+id/recipe"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_below="@+id/subscriptionbutton"
                    android:layout_toEndOf="@+id/workout"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="15dp"
                    android:background="@drawable/recipes"
                    android:shadowRadius="5"
                    android:onClick="calrecipe"/>

                <ImageView
                    android:id="@+id/imageid"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_below="@id/workout"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/ebars"
                    android:contentDescription="@string/todo" />

            </RelativeLayout>


        </ScrollView>



    </RelativeLayout>
</android.support.v4.widget.DrawerLayout>